hphp/hack/test/package_v2/package_access/illegal_cross_package_with_requirepackage_attr1.php.exp
error: Typing[4472] Cannot reference this CrossPackage method defined in package pkg2 from package pkg1 [1]
-> This function is marked cross package, so requires the package pkg2 to be loaded. You can check if package pkg2 is loaded by placing this call inside a block like if(package pkg2) [2]

illegal_cross_package_with_requirepackage_attr1.php--a.php:8:5
6 | class A {
7 |   public function test() : void {
[1]  8 |     test(); // error
9 |   }
10 | }
11 | <<__RequirePackage("pkg2")>>
[2] 12 | function test(): void {}

1 error found