hphp/hack/test/package_v2/package_access/illegal_cross_package_with_requirepackage_attr1.php
//// a.php
<?hh
// package pkg1

<<file:__EnableUnstableFeatures('require_package')>>

class A {
  public function test() : void {
    test(); // error
  }
}
<<__RequirePackage("pkg2")>>
function test(): void {}
